    [ticket:2464]

  - [removed] Deprecated identifiers removed:

    * allow_null_pks mapper() argument
      (use allow_partial_pks)

    * _get_col_to_prop() mapper method
      (use get_property_by_column())

    * dont_load argument to Session.merge()
      (use load=True)

    * sqlalchemy.orm.shard module
      (use sqlalchemy.ext.horizontal_shard)

- engine
  - [feature] Added a new system
    for registration of new dialects in-process
    without using an entrypoint.  See the
    docs for "Registering New Dialects".
    [ticket:2462]

  - [bug] The names of the columns on the
    .c. attribute of a select().apply_labels()
    is now based on <tablename>_<colkey> instead
    of <tablename>_<colname>, for those columns
    that have a distinctly named .key.
    [ticket:2397]

  - [feature] Inspector.get_primary_keys() is 
    deprecated; use Inspector.get_pk_constraint().
    Courtesy Diana Clarke.  [ticket:2422]

  - [bug] The autoload_replace flag on Table,
    when False, will cause any reflected foreign key
    constraints which refer to already-declared
    columns to be skipped, assuming that the
    in-Python declared column will take over 
    the task of specifying in-Python ForeignKey 
    or ForeignKeyConstraint declarations.

  - [bug] The ResultProxy methods inserted_primary_key,
    last_updated_params(), last_inserted_params(),
    postfetch_cols(), prefetch_cols() all
    assert that the given statement is a compiled
    construct, and is an insert() or update()
    statement as is appropriate, else
    raise InvalidRequestError.  [ticket:2498]

  - ResultProxy.last_inserted_ids is removed,
    replaced by inserted_primary_key.

- sql
  - [feature] The Inspector object can now be 
    acquired using the new inspect() service,
    part of [ticket:2208]

  - [feature] The column_reflect event now
    accepts the Inspector object as the first
    argument, preceding "table".   Code which
    uses the 0.7 version of this very new 